Added Options prop and included pause feature

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "main": "./dist/tooltip-me.common.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "mitt": "^3.0.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
